[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Regu.gd" type="Script" id=1]
[ext_resource path="res://sprites/regu.png" type="Texture" id=2]
[ext_resource path="res://soundEffects/bump.wav" type="AudioStream" id=3]
[ext_resource path="res://soundEffects/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://soundEffects/splat.wav" type="AudioStream" id=5]
[ext_resource path="res://soundEffects/land.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 7 )

[sub_resource type="Animation" id=2]
resource_name = "zenoJump"
length = 3.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "zeno_jump"
} ]
}

[node name="Regu" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -9 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0
bus = "SoundEffects"

[node name="SoundLand" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -0.125
bus = "SoundEffects"

[node name="SoundBump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
bus = "SoundEffects"

[node name="SoundSplat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 8.0
bus = "SoundEffects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/zenoJump = SubResource( 2 )
